<resources>
    <string name="app_name">Gerador de Sorteios Loterias da Caixa</string>
    <string name="app_title">Escolha em qual loteria deseja lançar sua sorte</string>
    <string name="logo_description">Imagem de logo das loterias da caixa</string>
    <string name="mega_da_virada">Mega da Virada</string>
    <string name="mega">Mega Sena</string>
    <string name="Quina">Quina</string>
    <string name="btn_voltar">Voltar</string>
    <string name="hint">Insira um número  entre 6 a 15</string>
    <string name="hint_quina">Insira um número entre 5 a 15</string>
    <string name="sortear">Sortear</string>
</resources>