<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_loterias"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_description"/>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        />

    <Button
        android:id="@+id/btn_mega_da_virada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mega_da_virada"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/mega"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <Button
        android:id="@+id/btn_mega_sena"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/mega"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/mega"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mega_da_virada" />

    <Button
        android:id="@+id/btn_quina"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/Quina"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/quina"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mega_sena" />

</androidx.constraintlayout.widget.ConstraintLayout>