<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/numeros_quina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Quina"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/quina"
        android:layout_marginTop="18dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/opc_numeros_quina"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/hint_quina"
        android:autofillHints=""
        android:maxLength="2"
        app:layout_constraintTop_toBottomOf="@+id/numeros_quina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btn_sortear_quina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortear"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/quina"
        app:layout_constraintTop_toBottomOf="@+id/opc_numeros_quina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/resultado_quina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Resultado"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_sortear_quina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/btn_voltar_quina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/quina"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>